clean code and bug fixed